# audio_editor

./: .gitignore  Cargo.toml  output.raw  shader.frag
res/shaders/: wave_view.wgsl  wave_view_compute.wgsl
src/: channel.rs  id.rs  main.rs  playback.rs  resampler.rs  sample.rs  state.rs  track.rs  util.rs  wave_view.rs
