[package]
name = "audio_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biquad = "0.4.2"
bytemuck = { version = "1.13.1", features = ["derive"] }
cpal = "0.15.2"
eframe = { path = "../../forks/egui/crates/eframe", version = "0.21.3", features = ["wgpu"] }
egui = { path = "../../forks/egui/crates/egui", features = ["bytemuck"] } # "0.21.0"
lazy_static = "1.4.0"
once_cell = "1.17.1"
rand = "0.8.5"
tracing-subscriber = "0.3.16"
wav = "1.0.0"
wgpu = "*"
